# streamlit-bi

./: .gitignore  CLAUDE.md  Home.py  README.jp.md  README.md  pyproject.toml  squadbase.yml
components/ec/: category_brand.py  data_agent_chat.py  data_queries.py  demographics.py  executive_overview.py  geo_logistics.py  inventory_supply.py  product_merchandising.py  sales_trends.py  utils.py
components/ec/data_agent/: bigquery_utils.py  data_agent.py  state.py  tools.py  utils.py
components/ga4/: basic_metrics.py  channels.py  countries.py  data_catalog.py  device_and_browser.py  eda_pygwalker.py  landing_page_performance.py  new_vs_returning.py  session_and_pv_by_date.py  session_anomaly.py  traffic_pattern.py  unique_visitors_by_date.py  user_path.py
lib/: bigquery_client.py  tailwind_colors.py
notebook/exploratory/: ga-exp.ipynb  google_analytics_sample_oginokairan.ipynb  thelook-ecdata.ipynb
pages/: 1_Google_Analytics_Dashboard.py  2_EC_Dashboard.py
tmp/: README.md
